--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <h1 class="name">Shrinivas Venkatesh Joshi</h1>
-      <img src="./images/me.png" alt="shrinivas-joshi" />
+      <img src="me.png" alt="shrinivas-joshi" />
       <hr />
     </header>
     <section class="summary">
